@@ -1,9 +1,16 @@
 # Point to vendor code, checked out from svn.  Must be an absolute
 # path with backslashes.  Do not use forward slashes.
-BASE_PATH = c:\vendor\windows
+BASE_PATH = c:\librets\vendor
+#
+# The path to the SWIG support files. This depends on the
+# SWIG version.
+SWIG_LIBRARY = /cygdrive/c/librets/vs2008-x86/share/swig/1.3.40
+
+# The BOOST version currently being used.
+BOOST_VERSION=boost-1_41
 
 # [debug, release]
-BUILD = debug
+BUILD = release
 
 # [dynamic, static]
 #
