@@ -4,7 +4,7 @@ PYTHON = python
 
 LIBRETS_LIB= ../../librets/src/$(BUILD_DIR)/$(LIB_PREFIX)rets$(LIB_RUNTIME)$(LIB_DEBUG_RUNTIME).$(LIB_EXT) $(WINLIBS)
 #CFLAGS = $(CFLAGS_STD) $(BOOST_CFLAGS) -I../../librets/include
-CFLAGS = /GR $(BOOST_CFLAGS) $(CURL_CFLAGS) -I../../librets/include
+CFLAGS = /GR /EHsc $(BOOST_CFLAGS) $(CURL_CFLAGS) -I../../librets/include
 
 LIBRETS_EXT = build/lib.win32-2.5/_librets.pyd
 
@@ -12,11 +12,16 @@ SETUP_CONFIG = setup.ini
 
 all: $(LIBRETS_EXT)
 
+librets_wrap.cpp: ../librets.i
+	$(SWIG) -c++ -python -o librets_wrap.cpp \
+		-I$(SWIG_LIBRARY)/python -I$(SWIG_LIBRARY) \
+		-I.. ../librets.i
+
 $(LIBRETS_EXT): librets_wrap.cpp
 	echo $(VERSION) > $(SETUP_CONFIG)
 	echo $(LIBRETS_LIB) >> $(SETUP_CONFIG)
 	echo $(CFLAGS) >> $(SETUP_CONFIG)
-	python setup.py build
+	python setup.py build --compiler=msvc
 
 install:
 	python setup.py install
